--- a/Source/Tesis/tesis.tex
+++ b/Source/Tesis/tesis.tex
@@ -14,7 +14,7 @@
 \usepackage{graphicx}
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc}
-\usepackage[spanish]{babel}
+%\usepackage[spanish]{babel}
 \usepackage{amsthm}
 \usepackage{lipsum}
 %\usepackage{calligra}
@@ -31,6 +31,11 @@
 \usepackage[numbers]{natbib}
 \usepackage{multirow}
 \usepackage{color}
+
+\theoremstyle{definition}
+
+\newtheorem{definition}{Definición}[chapter] % esto es para que lo numere como : capitulo. definicion
+
 
 \newcommand*{\id}{{\normalfont\hbox{1\kern-0.15em \vrule width .8pt depth-.5pt}}}
 
@@ -92,7 +97,7 @@
 %% La letra n con tilde es: \~n.
 
 \author{Julia Analía Cassetti}
-\title{Estimación de Parámetros en Imágenes SAR monopolarizas Usando Distancias Estocásticas y Núcleos Asimétricos}
+\title{Estimación de Parámetros en Imágenes SAR monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos}
 \degree{Doctor en Ciencia y Tecnología}
 \supervisor{Dr. Alejandro Frery Orgambide}
 \institution{Universidad Nacional de General Sarmiento}
