Subo tesis, capitulo 2 y 4
Subo capítulo 2, 4 y archivo general que se llama tesis

--- a/Source/Tesis/capitulo2.tex
+++ b/Source/Tesis/capitulo2.tex
@@ -35,23 +35,26 @@ clasificación de texturas~\cite{1246862}, restauración de imágenes~\cite{1224
 Los estimadores de mínima distancia mínima (MDE) son una  alternativa con buenas propiedades para el problema de la estimación de parámetros.
 Surgen de la idea de encontrar un estimador que sea el valor que minimiza la medida de la distancia entre las funciones de distribución empírica y teórica.
 Wolfowitz~\cite{wolfowitz1953, wolfowitz1957} estudió esta clase de estimadores y demostró que, bajo condiciones generales, estos estimadores son fuertemente consistentes. 
-Boos estudió~\cite{Boos1981} la distancia ponderada de Cramer-von Mises entre la función de distribución empírica y el modelo verdadero.
+Boos~\cite{Boos1981} estudió la distancia ponderada de Cramer-von Mises entre la función de distribución empírica y el modelo verdadero.
 El autor mostró que estos estimadores son consistentes y asintóticamente eficientes bajo cierta función de peso.
 Hettmansperger et al.~\cite{HettmanSperger1994} estudiaron estimadores de mínima distancia no pesados aplicados a un modelo de posición-escala a partir de la distancia de Cramer-von Mises. El autor demostró que estos estimadores son asintóticamente normales y tienen buenas propiedades de eficiencia y robustez.
-Beran~\cite{beran1977} estudió el problema de estimar la proporción de mezclas en un modelo no paramétrico mixto. El autor abordó este problema utilizando un estimador MDE utilizando la distancia de Hellinger entre un modelo mixto paramétrico y un estimador de densidad no paramétrico. Demostró propiedades importantes como la consistencia fuerte, la normalidad asintótica y la eficiencia asintótica.
+Beran~\cite{beran1977} propone un MDE estimador utilizando la distancia de Hellinger entre un modelo teórico y un estimador de densidad no paramétrico utilizando núcleos simétricos y mostró que este estimador es asintóticamente eficiente bajo ciertas familias paramétricas de densidades.
 Parr y Schucany~\cite{parr1982} demostraron que, bajo ciertas condiciones, el estimador MDE entre la función de distribución empírica y la función de distribución teórica es consistente.
 
-Beran~\cite{beran1977} estudió las propiedades del estimador de MDE, pero la minimización la realiza entre el modelo de densidad teórico y un estimador no paramétrico apropiado de la función de densidad subyacente.
-Las propiedades asintóticas y de robustez se examinaron utilizando la distancia de Hellinger.
 Cao et al.~\cite {cao1995minimum} propuso minimizar una distancia entre la función de densidad teórica y un estimador de la función de densidad subyacente utilizando el estimador de núcleo simétrico clásico para obtener estimadores de distancia mínima. Demostraron, siguiendo~\cite{parr1982}, la consistencia fuerte de estos estimadores bajo ciertas consideraciones, y también estudiaron su normalidad asintótica para el caso de la métrica $ L_2 $.
 
 %Gambini et al.~\cite{gambini2015} propusieron un estimador del parámetro de textura de la distribución $\mathcal{G}_I^0$ combinando MDE con distancias estocásticas. 
 %combining MDEs with stochastic distances. Ellos prponen minimizar la distancia triangular entre la función de densidad teórica y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos, en este caso, utilizaron el kernel gaussiano inverso. Los autores compararon el desempeño del estimador propueston con el obtenido por logcumulación y máxima verosimilitud, y obtuvieron buenos resultados
 %en términos de error cuadrático medio, sesgo, consistencia y robustez. 
 
-Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico~\cite{Silverman1986} que son populares en la estimación de la función de densidad. Sin embargo, si la función de densidad a estimar tiene soporte acotado, estos estimadores pueden dar estimaciones sesgadas en los bordes del soporte porque asignan probabilidad positiva fuera del soporte de la función. Una alternativa para mejorar esto es utilizar kernels asimétricos, Chen~\cite{chen1999, chensx2000} presenta núcleos Beta y Gamma, Scaillet~\cite {Scaillet2004} introduce núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), Bouezmarni et al.~\cite {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG. En~\cite{Jin2003} los autores proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados~\cite{Scaillet2004}. En esta tesis se propone estimar la función de densidad subyacente utilizando núcleos asimétricos.
+Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico~\cite{Silverman1986} que son populares en la estimación de la función de densidad. Sin embargo, si la función de densidad a estimar tiene soporte acotado, estos estimadores pueden dar estimaciones sesgadas en los bordes del soporte porque asignan probabilidad positiva fuera del soporte de la función. Una alternativa para mejorar esto es utilizar kernels asimétricos, Chen~\cite{chen1999, chensx2000} presenta núcleos Beta y Gamma, Scaillet~\cite {Scaillet2004} introduce núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), Bouezmarni et al.~\cite {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG. En~\cite{Jin2003} los autores proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados~\cite{Scaillet2004}. 
 
-En esta tesis se propone un nuevo  estimador de los parámetros de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente. Se prueba la consistencia del estimador para el caso de distancia triangular. Se compara el desempeño de este estimador, en términos de sesgo y error cuadrático medio y tasa de convergencia, con los presentes en la literatura. También se estudia la robustez del mismo bajo diferentes esquemas de contaminación.
+En esta tesis se propone un nuevo  estimador de los parámetros de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos. Se muestra que la distancia triangular es una buena elección para tratar este problema y se prueba la consistencia y la convergencia en casi todo punto de este estimador. Asimismo, a través de simulaciones Monte Carlo, se analiza:
 
-Esta tesis está organizada de la sigiuente manera:
+\begin{itemize}
+	\item El desempeño de este estimador para pequeñas muestras comparándolo, en términos de sesgo y error cuadrático medio y tasa de convergencia, con los estimadores presentes en la literatura.
+	\item La robustez del estimador propuesto bajo diferentes esquemas de contaminación.
+\end{itemize}  
+
+Esta tesis está organizada de la siguiente manera:
 
