--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -4028,6 +4028,21 @@ etric {SAR} data},
   timestamp = {2013.06.04}
 }
 
+@InCollection{Taneja1989,
+	title = {On Generalized Information Measures and Their Applications},
+	editor = {Peter W. Hawkes},
+	author = {I. Taneja},
+	booktitle = {Advances in Electronics and Electron Physics},
+	publisher = {Academic Press},
+	volume = {76},
+	pages = {327 - 413},
+	year = {1989},
+	issn = {0065-2539},
+	doi = {https://doi.org/10.1016/S0065-2539(08)60580-6}
+}
+
+
+
 @ARTICLE{Tang2006,
   author = {Jinshan Tang and Millington, S. and Acton, S.T. and Crandall, J.
 	and Hurwitz, S.},
@@ -4569,6 +4584,21 @@ etric {SAR} data},
   number = {3}
 }
 
+@article{Brown1999,
+	author = {Brown, B. M. and Chen, S. X.},
+	title = {Beta-Bernstein Smoothing for Regression Curves with Compact Support},
+	journal = {Scandinavian Journal of Statistics},
+	volume = {26},
+	number = {1},
+	pages = {47-59},
+	keywords = {bandwidth, Bernstein polynomials, beta kernels, boundary bias, hypergeometric distribution, mean integrated square error, non-parametric regression},
+	doi = {10.1111/1467-9469.00136},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1467-9469.00136},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1467-9469.00136},
+	abstract = {ABSTRACT. The problem of boundary bias is associated with kernel estimation for regression curves with compact support. This paper proposes a simple and uni(r)ed approach for remedying boundary bias in non-parametric regression, without dividing the compact support into interior and boundary areas and without applying explicitly different smoothing treatments separately. The approach uses the beta family of density functions as kernels. The shapes of the kernels vary according to the position where the curve estimate is made. Theyare symmetric at the middle of the support interval, and become more and more asymmetric nearer the boundary points. The kernels never put any weight outside the data support interval, and thus avoid boundary bias. The method is a generalization of classical Bernstein polynomials, one of the earliest methods of statistical smoothing. The proposed estimator has optimal mean integrated squared error at an order of magnitude n−4/5, equivalent to that of standard kernel estimators when the curve has an unbounded support.},
+	year = {1999}
+}
+
 @MISC{Sain94,
     author = {Stephan R. Sain},
     title = {Adaptive Kernel Density Estimation},
@@ -4639,8 +4669,7 @@ etric {SAR} data},
 
 @ARTICLE{HallMarron1991,
 	author = {Hall, P and Marron, J. S. },
-	title = {Local minima in cross-validation functi
-	ons},
+	title = {Local minima in cross-validation functions},
 	journal = {Journal of the 
 	Royal Statistical Society, Series B},
 	year = {1991},
@@ -4789,7 +4818,7 @@ etric {SAR} data},
 
 @book{pardo2005statistical,
 	title={Statistical inference based on divergence measures},
-	author={Pardo, Leandro},
+	author={Pardo, L.},
 	volume={185},
 	year={2005},
 	publisher={Chapman \& Hall/CRC}
@@ -4818,7 +4847,7 @@ etric {SAR} data},
 	number = {11}
 }
 
-@ARTICLE{Roseanblatt56,
+@ARTICLE{Rosenblatt56,
 	author = {Rosenblatt, M},
 	title = {Remarks on Some Nonparametric Estimates of a Density Function},
 	journal = {Annals of Mathematical Statistics},
@@ -5634,3 +5663,57 @@ doi = {10.1109/IGARSS.2017.8127630}
 	doi={10.1109/IGARSS.2013.6723504},
 	ISSN={2153-6996},
 	month={July},}
+
+@article{Dragomir2002,
+	author = {Dragomir, S},
+	year = {2002},
+	month = {01},
+	pages = {},
+	title = {Upper and lower bounds for Csiszar f-divergence in terms of Hellinger discrimination and applications},
+	journal = {Nonlinear Analysis Forum}
+}
+
+@book{Hirukawa2018,
+	title={Asymmetric Kernel Smoothing. Theory and Applications in Economics and Finance},
+	author={Hirukawa, M.},
+	year={2018},
+	series={Springer Briefs in Statistics},
+	publisher={Springer Singapore}
+}
+
+@article{huber1972,
+	author = "Huber, P.",
+	doi = "10.1214/aoms/1177692459",
+	journal = "The Annals of Mathematical Statistics",
+	month = "08",
+	number = "4",
+	pages = "1041--1067",
+	publisher = "The Institute of Mathematical Statistics",
+	title = "The 1972 Wald Lecture Robust Statistics: A Review",
+	url = "https://doi.org/10.1214/aoms/1177692459",
+	volume = "43",
+	year = "1972"
+}
+
+
+@article{Eslinger1990,
+	author = {Eslinger P.  and  Woodward, W. },
+	title = {Minimum hellinger distance estimation for normal models},
+	journal = {Journal of Statistical Computation and Simulation},
+	volume = {39},
+	number = {1-2},
+	pages = {95-114},
+	year  = {1991},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/00949659108811342},
+	
+	URL = { 
+	https://doi.org/10.1080/00949659108811342
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/00949659108811342
+	
+	}
+	
+}
