--- a/Source/Tesis/capitulo3.tex
+++ b/Source/Tesis/capitulo3.tex
@@ -6,11 +6,12 @@
 
 \chapter{Radar de Apertura Sintética}
 
-Los sistemas de Radar (radio detection and ranging: detección y medición de distancias por radio) son instrumentos que, a través de ondas electromagnéticas, detectan un objeto e indican su distancia y posición. 
+Los sistemas de Radar (\textit{RAdio Detection And Ranging}: detección y medición de distancias por radio) son instrumentos que, a través de ondas electromagnéticas, detectan un objeto e indican su distancia y posición. 
 Estos instrumentos miden la respuesta del blanco
 % % % ACF No sólo "terreno"; pueden ser barcos, edificios etc. Usar "blancos".
 a la radiación electromagnética emitida en forma de pulsos, el valor de esta respuesta es almacenada para su posterior procesamiento y se utiliza para formar una imagen de la zona de interés. 
-Un Radar de Apertura Sintética (synthetic aperture radar: SAR) es un tipo de sistema que consiste en procesar, mediante algoritmos, la información capturada por la antena del radar. Debido a la gran velocidad de desplazamiento del vehículo que transporta el radar, la antena del dispositivo SAR  se convierte en una antena virtual mucho más grande que la que tiene en realidad, por eso se llaman de apertura sintética. 
+Un Radar de Apertura Sintética (\textit{Synthetic Aperture Radar}: SAR) es un tipo de sistema que consiste en procesar, mediante algoritmos, la información capturada por la antena del radar. 
+Debido a la gran velocidad de desplazamiento del vehículo que transporta el radar, la antena del dispositivo SAR  se convierte en una antena virtual mucho más grande que la que tiene en realidad, por eso se llaman de apertura sintética. 
 % % % ACF ¿Qué "rendimiento"? ¿Sería resolución espacial?
 
 %La señal recibida por el radar es un número complejo, a partir de esta señal se forma la imagen. Si consideramos el módulo de la señal recibida decimos que los datos están dados en formato amplitud, en cambio, si utilizamos el cuadrado del módulo de dicha señal diremos los datos están dados en formato intensidad. En esta tesis se trabajará con los datos dados en este último formato.
