--- a/Source/Tesis/tesis.tex
+++ b/Source/Tesis/tesis.tex
@@ -33,6 +33,8 @@
 \usepackage{color}
 \usepackage{comment}
 
+\usepackage[textsize=tiny]{todonotes}
+
 \theoremstyle{definition}
 \newtheorem{definition}{Definición}[chapter] % esto es para que lo numere como : capitulo. definicion
 
