--- a/Source/Tesis/capitulo4.tex
+++ b/Source/Tesis/capitulo4.tex
@@ -11,7 +11,8 @@ Es sabido que tener información sobre la función de densidad o distribución d
 En este sentido existen dos enfoques para abordar este problema. 
 
 \begin{itemize}
-	\item Un enfoque paramétrico: donde se considera que la función de densidad teórica pertenece a una familia de funciones de densidad $f_X(\vec{\theta})$ conocida, indexada por el vector de parámetros $\theta$. Bajo esta suposición estimar la función de densidad teórica se reduce a estimar el valor de los parámetros del modelo a partir de la información proporcionada por la muestra. Los métodos clásicos de estimación paramétrica son: Método de los Momentos y Método de Máxima Verosimilitud. En los últimos años el Método de LogCumulantes, que se basa en la transformada de Mellin, ha ganado interés por su buena performance.
+	\item Un enfoque paramétrico: donde se considera que la función de densidad teórica pertenece a una familia de funciones de densidad $f_X(\vec{\theta})$\todo{¿Vas a usar la notación vectorial explícita? Se me hace un poco pesada.}
+	conocida, indexada por el vector de parámetros $\theta$. Bajo esta suposición estimar la función de densidad teórica se reduce a estimar el valor de los parámetros del modelo a partir de la información proporcionada por la muestra. Los métodos clásicos de estimación paramétrica son: Método de los Momentos y Método de Máxima Verosimilitud. En los últimos años el Método de LogCumulantes, que se basa en la transformada de Mellin, ha ganado interés por su buena performance.
 	\item Un enfoque no paramétrico: donde no se hace ninguna suposición inicial sobre la familia de densidades a las que pertenece la función de densidad teórica, sino que trata de estimarla teniendo como única información los datos muestrales, imponiendo  solamente las condiciones necesarias para que dicha estimación sea una función de densidad.
 \end{itemize}
 
@@ -29,8 +30,8 @@ Esta metodología de estimación propone, a partir del conocimiento de la famili
 El Método de los Momentos (MOM) fue introducido por Karl Pearson en el año 1894 y se basa en la idea intuitiva de pensar que, si los datos muestrales provienen de una determinada función de densidad entonces los momentos muestrales deberían dar buenas estimaciones de los correspondientes momentos poblacionales. 
 
 \begin{definition}
-Si $X_1, \ldots, X_n$ es una muestra de variables aleatorias independientes e idénticamente distribuidas con función de densidad $f_{X;\theta}$, donde $\theta \in \mathbb{R}$ es el parámetro a estimar, y $g(x)$ una función de $\mathbb{R}$ en $\mathbb{R}$, el Método de los Momentos propone como estimador $\hat{\theta}_{mom}$ de $\theta$ aquel valor del parámetro que es solución de la ecuación  $\dfrac{1}{n} \sum_{i=1}^n g(X_i)=E_{\theta}(g(X_i)).$  
-Si en cambio $X_i \sim f_{X;\vec{\theta}}$ con $\theta \in \Theta \subset \mathbb{R}^k$, entonces $\hat{\theta}_{mom}$ será el valor $\vec{\theta}$ que verifica el sistema de ecuaciones $\dfrac{1}{n} \sum_{i=1}^n g_s(X_i)=E_{\theta}(g_s(X_i))$ donde $s=1, \ldots k$ y $g_s(x)$ son $k$ funciones de $\mathbb{R}$ en $\mathbb{R}$.
+Si $X_1, \ldots, X_n$ es una muestra de variables aleatorias independientes e idénticamente distribuidas con función de densidad $f_{X;\theta}$, donde $\theta \in \mathbb{R}$ es el parámetro a estimar, y $g(x)$ una función de $\mathbb{R}$ en $\mathbb{R}$, el Método de los Momentos propone como estimador $\hat{\theta}_{\text{mom}}$ de $\theta$ aquel valor del parámetro que es solución de la ecuación  $\dfrac{1}{n} \sum_{i=1}^n g(X_i)=E_{\theta}(g(X_i)).$  
+Si en cambio $X_i \sim f_{X;\vec{\theta}}$ con $\theta \in \Theta \subset \mathbb{R}^k$,\todo{Cuidado con la notación de $\theta$.} entonces $\hat{\theta}_{\text{mom}}$ será el valor $\vec{\theta}$ que verifica el sistema de ecuaciones $\dfrac{1}{n} \sum_{i=1}^n g_s(X_i)=E_{\theta}(g_s(X_i))$ donde $s=1, \ldots k$ y $g_s(x)$ son $k$ funciones de $\mathbb{R}$ en $\mathbb{R}$.
 \end{definition}
 
 
@@ -41,10 +42,9 @@ Obsevemos que si $g_s(x)=x^s$ la definición es consistente con la idea intuitiv
 
 El estimador por Momentos Fracionales ha sido estudiado en los últimos tiempos~\cite{Frery97,GambiniSC08,Khan2013}. En esta tesis se utilizarán los momentos de orden $1$ y de orden $\frac{1}{2}$ porque mostraron una mejor performance a la hora de estimar los parámetros de la distribución $\mathcal G_I^0$ respecto de los momentos de orden $1$ y de orden $2$.
 
-Las ecuaciones de momento de orden $1$ y de orden $\frac{1}{2}$ para estimar los parámetros de la distribución $\mathcal G_I^0$ son:
-
+Las ecuaciones de momento de orden $1$ y de orden $\frac{1}{2}$ para estimar los parámetros de la distribución $\mathcal G_I^0$ son:\todo{Todavía no presentaste la distribución, y no definiste $\overline X$.}
 \begin{align}
-\overline{X}=&\dfrac{\gamma}{-\alpha - 1} \\
+\overline{X}=&\dfrac{\gamma}{-\alpha - 1}, \\
 \nonumber \\ 
 \dfrac{\sum_{i=1}^n X_i^{1/2}}{n}=&\dfrac{\gamma^{1/2}}{L^{1/2}}\dfrac{\Gamma(-\alpha - 1/2)}{\Gamma(-\alpha)}\dfrac{\Gamma(L+ 1/2)}{\Gamma(L)}.
 \end{align}
@@ -52,13 +52,14 @@ Las ecuaciones de momento de orden $1$ y de orden $\frac{1}{2}$ para estimar los
 
 \subsection{Método de Máxima Verosimilitud}
 
- El Método de Máxima Verosimilitud fue popularizado por R. Fisher entre 1912 y 1922. Sin embargo este método había sido utilizado antes por Gauss, Laplace entre otros investigadores. La idea del método consiste en, dada una muestra, estimar los parámetros de la distribución que maximice la probabilidad de que haya salido esa muestra. Este estimador tiene muy buenas propiedades asintóticas, además de ser consistente es asintóticamente normal y eficiente bajo condiciones generales.
+ El Método de Máxima Verosimilitud fue popularizado por R. Fisher entre 1912 y 1922. Sin embargo este método había sido utilizado antes por Gauss, Laplace entre otros investigadores. La idea del método consiste en, dada una muestra, estimar los parámetros de la distribución que maximicen la probabilidad\todo{¿Pro\-ba\-bi\-li\-dad o verosimilitud?} de que haya salido esa muestra. Este estimador tiene muy buenas propiedades asintóticas, además de ser consistente es asintóticamente normal y eficiente bajo condiciones generales.
 
 \begin{definition}
-Si $X_1, \ldots, X_n$ es una muestra de variables aleatorias independientes e idénticamente distribuidas con función de densidad $f_{X;\vec{\theta}}$  con $\vec{\theta} \in \Theta \subset \mathbb{R}^k$, diremos que $\widehat{\vec{\theta}}_{MV}$ es el estimador de máxima verosimilitud de $\vec{\theta}$ si verifica que 
+Si $X_1, \ldots, X_n$ es una muestra de variables aleatorias independientes e idénticamente distribuidas con función de densidad $f_{X;\vec{\theta}}$  con $\vec{\theta} \in \Theta \subset \mathbb{R}^k$, diremos que $\widehat{\vec{\theta}}_{MV}$ es un estimador de máxima verosimilitud de $\vec{\theta}$ si verifica que 
 \begin{align}
 \widehat{\vec{\theta}}_{{\text{\tiny{MV}}}}=\arg\max_{\vec{\theta \in \Theta}} L(\vec{\theta}/\vec{X}=\vec{x})
 \end{align}
+\todo{Revisá toda la puntuación después de ecuaciones centralizadas. O terminan con punto, o terminan en coma.}
 siendo $L(\vec{\theta}/\vec{X}=\vec{x})$ la función de verosimilitud, que es la función de densidad conjunta del vector aleatorio $\vec{X}$ mirada como función del vector de parámetros $\vec{\theta}$, sabiendo que salió la muestra $\vec{x}$.
 \end{definition}
 
@@ -70,11 +71,12 @@ El parámetro $\gamma$ en la distribución $\mathcal{G}_I^0$  es proporcional al
 A este valor de $\gamma$ lo llamaremos $\gamma^*$.
 
 Entonces, si $Z_1,\ldots Z_n$ una muestra de variables aleatorias independientes e idénticamente distribuidas donde $Z_i \sim f_{\mathcal G_I^0(\alpha,\gamma)}(z)$,  el logaritmo de la función de verosimilitud bajo la condición~\eqref{gama*} es:
-
+%%% ACF No dejes espacio antes de las ecuaciones
 \begin{align}
-\nonumber \log(L(\alpha)/\vec{Z}=\vec{z})&=n(L \log(L)+log(\Gamma(L-\alpha))-\log(\Gamma(L))-\log(\Gamma(-\alpha))-\alpha \log(-\alpha-1))\\
+\nonumber \log(L(\alpha)/\vec{Z}=\vec{z})&=n(L \log(L)+\log(\Gamma(L-\alpha))-\log(\Gamma(L))-\log(\Gamma(-\alpha))-\alpha \log(-\alpha-1))\\
 & + (L-1) \sum_{i=1}^n \log(z_i))-(L-\alpha) \sum_{i=1}^n(\log(-\alpha-1+z_i L))).
 \end{align}
+\todo{Revisá la ecuación, sacá los paréntesis que no son imprescindibles, usá mid para "dado", etc.}
 
 %\begin{align}
 %\nonumber \log(L(\alpha,\gamma)/\vec{Z}=\vec{z})&=n(L \log(L)+log(\Gamma(L-\alpha))-\log(\Gamma(L))-\log(\Gamma(-\alpha))-\alpha \log(\gamma))\\
@@ -99,7 +101,6 @@ En la figura~\ref{MV} se muestra el gráfico del logaritmo de la función de ver
 \end{figure}
 
 También se podría encontrar $\widehat{\alpha}_{{\text{\tiny{MV}}}}$ como la solución de la siguiente ecuación no lineal.
-
 \begin{align}
 \label{rootML}
 \Psi^0(-\widehat{\alpha}_{{\text{\tiny{MV}}}})-\Psi^0(L-\widehat{\alpha}_{{\text{\tiny{MV}}}})-\log(-1-\widehat{\alpha}_{{\text{\tiny{MV}}}})+{} \nonumber\\
@@ -115,7 +116,7 @@ donde $\Psi^0(\cdot)$ es la función digamma. Este sistema no tiene una solució
 Es conocida la relación que existe entre los momentos y la función característica de una variable aleatoria con la transformada de Fourier de su función de densidad. 
 
 \begin{definition}
-Si $X$ es una variable aleatoria continua con función de densidad $f_X(x)$, la función característica $\phi_X: \mathbb{R} \rightarrow \mathbb{C}$ se define como 
+Si $X$ es una variable aleatoria continua con función de densidad $f_X(x)$, la función característica $\phi_X\colon \mathbb{R} \rightarrow \mathbb{C}$ se define como 
 \begin{align}
 \phi_X(t)=E(e^{itX})=\int_{-\infty}^{\infty} e^{itx} f_X(x) dx = \mathcal{F}\{f_X\}(t),
 \label{fi}
@@ -124,29 +125,25 @@ siendo $\mathcal{F}\{f_X\}$ la transformada de Fourier de $f_X$.
 \end{definition}
 
 Cuando los momentos de orden $n$ de una variable aleatoria existen, es decir, cuando $E(X^k)< \infty$, se puede apelar a la relación~\eqref{fi} para calcular dichos momentos. Entonces
-
 \begin{align}
 \phi_X^{(k)}(0)=i^k E(X^k)
 \label{fi}
 \end{align}
 con $\phi_X^{(k)}$ la derivada de orden $k$ de $\phi_X$ evaluada en $t=0$. Luego, los momentos de orden $k$ se pueden definir como 
-
 \begin{align}
 \label{MomentosPrimerTipo}
 m_k=E(X^k)=i^{-k} \phi_X^{(k)}(t)\big\arrowvert _{t=0}
 \end{align}
 
 Si llamamos $\psi_X=\log(\phi_X)$, los cumulantes de orden $k$ se definen como 
-
 \begin{align}
 \label{CumulantePrimerTipo}
 \kappa_k=i^{-k} \psi_X^{(k)}\big\arrowvert _{t=0}
 \end{align}
 
 Nicolas et al.~\cite{nicolas2002} proponen utilizar la transformada de Mellin en lugar de la transformada de Fourier en~\eqref{fi}, para el caso donde la función de densidad $f_X$ de la variable aleatoria $X$ tiene soporte positivo. De esta manera surgen nuevas características para la variable aleatoria que son los Log Momentos (MomL) y los Log Cumulantes (MomLC). Los autores proponen llamar a esta metodología Estadísticas de Segundo Tipo. Entonces, análogamente a la metodología descripta en~\ref{fi}, definen:
-
 \begin{itemize}
-\item Primer función característica de segundo tipo.
+\item Primera función característica de segundo tipo.
 	\begin{align}
 	\Phi_X(s)=\int_{0}^{\infty} x^{s-1} f_X(x) dx = \mathcal{M}\{f_X\}(s)
 	\label{PrimerFuncionCaract}
@@ -238,8 +235,8 @@ donde $p(x)$ y $q(x)$ representan las funciones de densidad de $P$ y $Q$ respect
 
 Se puede pensar que si $p(x)$ es el modelo verdadero, la KL divergencia mide cu\'anto me alejo del modelo verdadero, si utilizo el modelo $q$ en vez del modelo $p$. Hay que notar que si $p(x)=q(x)$ la distancia $\text{KL}=0.$ Esta medida de ``distancia'' no es sim\'etrica ni cumple con la desigualdad triangular,  en cambio s\'i cumple que $D_{\text{KL}}(p \rVert q)\geq 0$ y $D_{\text{KL}}(p \rVert q)= 0 \Longleftrightarrow p=q.$ 
 
-Muchas de las medidas utilizadas que se basan en determinar diferencias entre una estimación de la función de densidad subyacente y el modelo teórico no son métricas, donde por métrica entendemos que son aquellas funciones $d:X \times X\rightarrow \mathbb{R}^+$ que cumplen:
-
+Muchas de las medidas utilizadas que se basan en determinar diferencias entre una estimación de la función de densidad subyacente y el modelo teórico no son métricas, donde por métrica entendemos que son aquellas funciones $d\colon X \times X\rightarrow \mathbb{R}^+$ que cumplen:
+%%% ACF Como después te referís al número de la propiedad, deberían estar enumeradas
 \begin{itemize}
 	\label{metrica}
 	\item $d(x,y)\geq 0$ $\forall x,y \in X$
@@ -255,10 +252,9 @@ Salicrú et al.~\cite{Salicru1994} propusieron una familia de medidas de diverge
 \begin{definition}[$\phi \text{-} divergencias$]
 	\label{fiDivergencia}
 	Sean $F(x)$ y $G(x)$ dos funciones de distribución definidas sobre el mismo conjunto $S \subset \mathbb{R}$, ambas absolutamente continuas con respecto a la medida Lebesgue, es decir existen $f(x)$ y $g(x)$ funciones de densidad correspondientes a $F$ y $G$ respectivamente. Además $F(x)$ absolutamente continua con respecto a $G(x)$, entonces para toda función convexa $\phi:[0,+\infty)\longrightarrow \mathbb{R}$ tal que $\phi(1)=0$ la $\phi \text{-} divergencia$ entre $f$ y $g$ se define como
-	
 	\begin{align}
 		D_{\phi}(f, g)=\int_{S}  \phi\left(\dfrac{f}{g}\right) g dx=E_{g}\left(\phi\left(\dfrac{f}{g}\right)\right).
-	\end{align}
+	\end{align}\todo{¿Tiene sentido poner $dx$?}
 	%donde $f_{\theta_1}$ y $f_{\theta_2}$ las funciones de densidad de $F_{\theta_1}$ y $F_{\theta_2}$ respectivamente.
 \end{definition}
 
@@ -270,7 +266,7 @@ Cabe realizar algunas observaciones:
 	\displaystyle \int_{S} \phi\left(\dfrac{f(x)}{g(x)}\right) g(x) dx \geq \phi\left(\int_{S} \dfrac{f(x)}{g(x)} g(x) dx\right)=\phi(1)
 \end{align}
     Entonces, la condición $\phi(1)=0$ garantiza que la medida de divergencia cumpla que $D_{\phi}(f, g) \geq 0.$ Además, si $f=g$ entonces $D_{\phi}(f, f)= 0.$ 
-    \item La condición que $F(x)$ sea absolutamente continua con respecto a $G(x)$ es equivalente a pedir que, en casi todo punto, $\mathrm{Sop}(G) \subset \mathrm{Sop}(f).$ En general, en la literatura se pide que ambas funciones de densidad tengan un soporte común.
+    \item La condición que $F(x)$ sea absolutamente continua con respecto a $G(x)$ es equivalente a pedir que, en casi todo punto, $\mathrm{Sop}(G) \subset \mathrm{Sop}(f)$. En general, en la literatura se pide que ambas funciones de densidad tengan un soporte común.
 \end{itemize}
 
 \begin{example} Ejemplos de $\phi-divergencias$. En estos ejemplos llamaremos $S=\mathrm{Sop}(f)=\mathrm{Sop}(g).$
@@ -287,12 +283,13 @@ Cabe realizar algunas observaciones:
 		\end{align}
 		donde $\phi(x)=\dfrac{\left(x-1 \right)^2}{x+1}$.
 		\item Bhattacharyya $D_{\text{DT}}=-\log \displaystyle \int_{S} \sqrt{f_Vf_W}$.
+		\todo{¿Cuál es la $\phi$?}
 	\end{itemize}
 \end{example}
 
 \begin{definition} $\left(h,\phi\right) \text{-} divergencias$.\\
 	\label{hfiDivergencia}
-	Si se mantienen las hipótesis de la definición~(\ref{fiDivergencia}) y $h: (0,+\infty)\longrightarrow [0,+\infty)$ es una función estrictamente creciente que verifica que $h(0)=0$ entonces se define la $\left(h,\phi\right) \text{-} divergencia$ como
+	Si se mantienen las hipótesis de la definición~(\ref{fiDivergencia}) y $h\colon (0,+\infty)\longrightarrow [0,+\infty)$ es una función estrictamente creciente que verifica que $h(0)=0$ entonces se define la $\left(h,\phi\right) \text{-} divergencia$ como
 	\begin{align}
 	D^h_{\phi}(f, g)=h\left(\int_{S} \phi\left(\dfrac{f(x)}{g(x)}\right) g(x) \ dx\right)=E_{g}\left(\phi\left(\dfrac{f}{g}\right)\right).
 	\end{align}
@@ -310,17 +307,19 @@ Cabe realizar algunas observaciones:
 		D_\text{R}^{\beta}(V,W)=\frac{1}{2(\beta-1)}\log\int_{-\infty}^{\infty}\big({f_V^{\beta}f_W^{1-\beta})+\log\int_{-\infty}^{\infty}\big(f_V^{1-\beta}f_W^{\beta}}\big).
 		\end{align}
 	\end{itemize}
+\todo{Si las $\phi$ son casos particulares de las $h$-$\phi$, basta decirlo y agregar acá alguna que no sea $\phi$.}
 \end{example}
 		
 Se han encontrado muchas aplicaciones de estas medidas de divergencia en señales y procesamiento de imágenes~\cite{4218961}, en el análisis de imágenes médicas~\cite{5599869}, detección automática de regiones en imágenes SAR~\cite{ClassificationPolSARSegmentsMinimizationWishartDistances,EdgeDetectionDistancesEntropiesJSTARS,SARSegmentationLevelSetGA0}. 
 
-Cabe señalar que muchos autores han encontrado cotas superiores e inferiores que vinculan la distancia triangular con otras medidas de divergencia que se encuentran en la clase de las $\phi \text{-} divergencias$, especialmente para el caso discreto. Particularmente esto es útil ya que contribuye a obtener resultados de convergencia entre distintas divergencias. En Dragomir~\cite{Dragomir2002} el autor encuentra cotas superiores e inferiores para las $\phi \text{-} divergencias$ en términos de la KL divergencia. Jain et. al.~\cite{JainSrivastava2007} también encuentra cotas que vinculan a la distancia triangular con las discrepancias Jensen – Shannon, Simétrica Chi-square, Aritmética entre otras. Taneja~\cite{Taneja2006} estudió nuevas cotas entre la discriminación triangular (distancia triangular para el caso discreto) y la media armónica y la simétrica Chi-square divergencia.
+Cabe señalar que muchos autores han encontrado cotas superiores e inferiores que vinculan la distancia triangular con otras medidas de divergencia que se encuentran en la clase de las $\phi \text{-} divergencias$, especialmente para el caso discreto. Particularmente esto es útil ya que contribuye a obtener resultados de convergencia entre distintas divergencias. En Dragomir~\cite{Dragomir2002} el autor encuentra cotas superiores e inferiores para las $\phi \text{-} divergencias$ en términos de la KL divergencia. Jain et. al.~\cite{JainSrivastava2007} también encuentran cotas que vinculan a la distancia triangular con las discrepancias Jensen-Shannon, Simétrica Chi-square, Aritmética entre otras. 
+Taneja~\cite{Taneja2006} estudió nuevas cotas entre la discriminación triangular (distancia triangular para el caso discreto) y la media armónica y la simétrica Chi-square divergencia.
 
 En Cassetti et al.~\cite{APSAR2013ParameterEstimationStochasticDistances} se estudiaron estas divergencias o distancias estocásticas en el contexto de proponer un nuevo estimador para $\alpha$, el parámetro de textura para el modelo $\mathcal{G}_I^0$, a través de la minimización de la distancia estocástica entre el modelo teórico y una estimación no paramétrica de la función de densidad subyacente. En ese trabajo se analizaron las distancias estocásticas de Hellinger, Bhattacharyya, R\'enyi and Triangular y se compararon con el estimador de máxima verosimilitud de $\alpha$ mostrando evidencia que la distancia triangular era una buena elección para este problema. Por este motivo nos focalizaremos en estudiar la distancia triangular en particular. En lo siguiente definiremos la distancia triangular generalizada y veremos que es una métrica en el sentido que cumple con las condiciones~(\ref{metrica}). Probaremos algunos resultados que nos serán útiles al momento de estudiar la convergencia del estimador propuesto en esta tesis.
 
 \subsection{Distancia triangular generalizada}
 
-Sea $d_{s}:\R_{+}\times\R_{+}\to\R_{+}$ la función definida por
+Sea $d_{s}\colon\R_{+}\times\R_{+}\to\R_{+}$ la función definida por
 \begin{align*}
 d_{s}\pa{a,b} = 
 \begin{cases}
@@ -338,7 +337,7 @@ d_{s}\pa{a,b} =
 \end{lemma}
 
 \begin{dem}
-	Claramente $d_{s}\pa{a,b} = d_{s}\pa{b,a} \ge 0$ y $d_{s}\pa{a,b} = 0$ si y solo si $a = b$.
+	Claramente $d_{s}\pa{a,b} = d_{s}\pa{b,a} \ge 0$ y $d_{s}\pa{a,b} = 0$ si y sólo si $a = b$.
 	Para mostrar que $d_{s}$ define una distancia en $\R_{+}$ basta mostrar que se cumple la desigualdad triangular
 	\begin{align*}
 	d_{s}\pa{a,c} \le d_{s}\pa{a,b} + d_{s}\pa{b,c}.
@@ -536,7 +535,7 @@ Notemos que el segundo término de la ecuación~\eqref{fi} se puede ver como $E_
 \begin{align}
 \hat{E}_\text{X}(\widehat{f}_b(x))=\frac{1}{n}\sum_{i=1}^n \widehat{f}_{b,-i}(X_i)
 \end{align}	
-donde  es el estimador de $\widehat{f}_{b,-i}$ sin considerar la $i^{th}$ observación. De esta forma nos aseguramos que las observaciones utilizadas para calcular  $\widehat{f}(\cdot)$ son independientes de $X_i.$
+donde  es el estimador de $\widehat{f}_{b,-i}$ sin considerar la $i$-ésima observación. De esta forma nos aseguramos que las observaciones utilizadas para calcular  $\widehat{f}(\cdot)$ son independientes de $X_i.$
 %$\widehat{f}_{-i}(x)= \widehat{f}_{i;h}(x)=\dfrac{1}{n} \displaystyle{\sum_{j=1,j\neq i}^n} K_{(x,h)}(X_i)$
 
 El valor de $b_{\tiny \text{LSCV}}$ óptimo que propone este método es aquel valor que minimiza la función de cross validación 
@@ -547,6 +546,7 @@ El valor de $b_{\tiny \text{LSCV}}$ óptimo que propone este método es aquel va
 Hall and Marron~\cite{HallMarron1991} muestran que, para el caso de núcleos simétricos, esta función puede tener mínimos locales. Entonces el  $b_{\tiny \text{LSCV}}$ será el más grande de los mínimos locales porque tiene un mejor comportamiento empírico que el mínimo global.
 
 En la figura~\ref{LSCV} se puede ver la función de cross validación LSCV en función del ancho de banda, usando núcleo Gamma, para $L=3$, $\alpha=\{-3,-5\}$ y $n=\{9,25,49,81,121\}$. Se puede ver que, en todos los casos, esta función presenta un único mínimo.
+\todo{\dots\ pero que en algunas situaciones se vuelve plana y, por lo tanto, de difícil minimización.}
 
 \begin{figure}[hbt]
 	\centering 
@@ -575,7 +575,7 @@ En la figura~\ref{LSCV} se puede ver la función de cross validación LSCV en fu
 
 En general los estimadores $\widehat{f}_{\tiny \text {KS}}$ tienen un buen comportamiento cuando la función de densidad está definida en toda la recta real. Pero cuando la función de densidad tiene soporte acotado o semiacotado inferiormente este estimador presenta sesgo especialmente cerca del borde del soporte. Esto se debe a que estos estimadores asignan probabilidad fuera del soporte de la distribución.
 
-Diferentes alternativas se han propuesto para resolver el problema del sesgo en el borde utilizando núcleos simétricos, alguna de ellas pueden dar estimaciones negativas de la función de densidad. Entre estas alternativas se encuentran los métodos de reflexión, de renormalización y los boundary kernels entre otras. Una descripción de estos métodos se pueden encontrar en~\cite{Jones1993}.
+Diferentes alternativas se han propuesto para resolver el problema del sesgo en el borde utilizando núcleos simétricos, alguna de ellas pueden dar estimaciones negativas de la función de densidad. Entre estas alternativas se encuentran los métodos de reflexión, de renormalización y los \textit{boundary kernels} entre otras. Una descripción de estos métodos se pueden encontrar en~\cite{Jones1993}.
 
 
 Otra forma de encarar el problema del sesgo en el borde es la utilización de núcleos asimétricos (A). Brown and Chen~\cite{Brown1999,chen1999} propusieron los Beta kernel, Chen~\cite{chensx2000} los Gamma kernels (GA), Scaillet~\cite{Scaillet2004} el Inverso Gaussiano (IG) y Recíproco Gaussiano Inverso (RIG), Jin et. al.~\cite{Jin2003} el Log Normal kernel (LN) y Birnbaum-Saunders. Todos estos núcleos tienen soporte en $[0,+\infty)$, no asignan peso fuera del soporte de la distribución, no tienen sesgo en el borde y alcanzan una tasa de convergencia en el sentido del error cuadrático medio integrado de $n^{-4/5}.$
@@ -592,7 +592,7 @@ Sea $X_1, \ldots, X_n$ una muestra aleatoria donde $X_i \sim f_{\theta}$ con $f_
 \widehat{f}_{\text{A}_n}(x)=\frac{1}{n}\sum_{i=1}^n K_{\theta(x,b)}(X_i),
 \label{fn}
 \end{equation}
-donde  $b$ es el ancho de banda, ${\theta}(x,b)$ es el vector de parámetros que depende del núcleo usado, y $K$ el núcleo asimétrico.
+donde  $b$ es el ancho de banda, ${\theta}(x,b)$ es el vector de parámetros\todo{¡Ojo con la notación!} que depende del núcleo usado, y $K$ el núcleo asimétrico.
 \end{definition}
 
 Es necesario que el núcleo asímétrico:
@@ -898,7 +898,7 @@ Si se considera un conjunto de condiciones más fuertes sobre el ancho de banda 
 %	\end{itemize}
 
 
-VER ABAJO COMENTADO
+VER ABAJO COMENTADO\todo{Dejar claro qué viene de la literatura, y qué es tuyo, aunque sean ajustes de notación.}
 %\item Explicit expression of $b_{opt}$ can be obtained for $L\geq \dfrac{3}{2}$.
 %\medskip
 %\item Because the integrals converge for $L\geq \dfrac{3}{2}$.
